Added jvmArgs to test task for compatibility with JDK 16.